--- a/charts/gha-runner-scale-set-controller/Chart.yaml
+++ b/charts/gha-runner-scale-set-controller/Chart.yaml
@@ -21,7 +21,7 @@ version: 0.10.1
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
-appVersion: "0.10.1"
+appVersion: "0.10.1-devzero"
 
 home: https://github.com/actions/actions-runner-controller
 
