--- a/.github/workflows/arc-publish-chart.yaml
+++ b/.github/workflows/arc-publish-chart.yaml
@@ -13,6 +13,10 @@ on:
     - '!charts/gha-runner-scale-set-controller/**'
     - '!charts/gha-runner-scale-set/**'
     - '!**.md'
+  # test
+  pull_request:
+    branches:
+      - master
   workflow_dispatch:
     inputs:
       force:
@@ -128,7 +132,7 @@ jobs:
     permissions:
       contents: write # for helm/chart-releaser-action to push chart release and create a release
     env:
-      CHART_TARGET_ORG: actions-runner-controller
+      CHART_TARGET_ORG: devzero-inc
       CHART_TARGET_REPO: actions-runner-controller.github.io
       CHART_TARGET_BRANCH: master
 
@@ -147,8 +151,8 @@ jobs:
       id: get_workflow_token
       uses: peter-murray/workflow-application-token-action@dc0413987a085fa17d19df9e47d4677cf81ffef3
       with:
-        application_id: ${{ secrets.ACTIONS_ACCESS_APP_ID }}
-        application_private_key: ${{ secrets.ACTIONS_ACCESS_PK }}
+        application_id: ${{ secrets.WORKFLOW_ACTIONS_APP_ID }}
+        application_private_key: ${{ secrets.WORKFLOW_ACTIONS_PEM }}
         organization: ${{ env.CHART_TARGET_ORG }}
 
     - name: Install chart-releaser
