--- a/.github/workflows/arc-release-runners.yaml
+++ b/.github/workflows/arc-release-runners.yaml
@@ -15,7 +15,7 @@ on:
 env:
   # Safeguard to prevent pushing images to registeries after build
   PUSH_TO_REGISTRIES: true
-  TARGET_ORG: actions-runner-controller
+  TARGET_ORG: devzero-inc
   TARGET_WORKFLOW: release-runners.yaml
   DOCKER_VERSION: 24.0.7
 
@@ -41,8 +41,8 @@ jobs:
         id: get_workflow_token
         uses: peter-murray/workflow-application-token-action@dc0413987a085fa17d19df9e47d4677cf81ffef3
         with:
-          application_id: ${{ secrets.ACTIONS_ACCESS_APP_ID }}
-          application_private_key: ${{ secrets.ACTIONS_ACCESS_PK }}
+          application_id: ${{ secrets.WORKFLOW_ACTIONS_APP_ID }}
+          application_private_key: ${{ secrets.WORKFLOW_ACTIONS_PEM }}
           organization: ${{ env.TARGET_ORG }}
 
       - name: Trigger Build And Push Runner Images To Registries
