Test (gha) Publish Helm Charts workflow

--- a/.github/workflows/gha-publish-chart.yaml
+++ b/.github/workflows/gha-publish-chart.yaml
@@ -1,6 +1,10 @@
 name: (gha) Publish Helm Charts
 
 on:
+  # test
+  pull_request:
+    branches:
+      - master
   workflow_dispatch:
     inputs:
       ref:
