--- a/charts/gha-runner-scale-set-controller/Chart.yaml
+++ b/charts/gha-runner-scale-set-controller/Chart.yaml
@@ -15,19 +15,19 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.10.1
+version: "0.10.1-test"
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
-appVersion: "0.10.1-devzero"
+appVersion: "0.10.1-test"
 
-home: https://github.com/actions/actions-runner-controller
+home: https://github.com/devzero-inc/actions-runner-controller
 
 sources:
-  - "https://github.com/actions/actions-runner-controller"
+  - "https://github.com/devzero-inc/actions-runner-controller"
 
 maintainers:
   - name: actions
-    url: https://github.com/actions
+    url: https://github.com/devzero-inc
